[tool.poetry]
name = "bms-monitor-sam"
version = "0.2.0"
description = ""
authors = ["Yukihiro Okada <yuokada@users.noreply.github.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37.16"
requests = "^2.25"
urllib3 = "<3"

[tool.poetry.group.dev.dependencies]
aws-sam-cli = "^1.135.0"
pytest = "^8.3"
notebook = "^7.3.0"
ruff = "^0.12"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250306"

[tool.ruff]
line-length = 120

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# see: https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml
select  = ["I", "E", "W", "F", "UP"]
fixable = ["I", "E", "W", "F", "UP"]

[tool.ruff.lint.isort]
# Use a single line between direct and from import.
lines-between-types = 1
#section-order = [
#    "future",
#    "standard-library",
#    "local-folder",
#    "third-party",
#    "first-party",
#]

[tool.ruff.format]
# instead of "skip-string-normalization = true"
# see: https://github.com/astral-sh/ruff/issues/7525
# quote-style = "preserve"

[tool.mypy]
# see: https://mypy.readthedocs.io/en/latest/config_file.html#example-pyproject-toml
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disable_error_code = "annotation-unchecked"

[[tool.mypy.overrides]]
module = ["requests.packages.urllib3.util.retry"]
ignore_missing_imports = true
check_untyped_defs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
